altribute added and style error updates

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>James Ukoli</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css">
     <style>
         .imgMe {
             display: block;
@@ -27,7 +27,7 @@
     <!-- HEADER DIVISION-->
     <header>
         <h1> James Ukoli </h1>
-        <img src="images/imgme.jpg" width = 300 height=400 class="imgMe"> 
+        <img src="images/imgme.jpg" alt="Miami Picture" width = 300 height=400 class="imgMe"> 
         </header>
     <!-- BELOW IS THE INTRO DIVISION-->
     <h2> INTRODUCTION </h2>
@@ -75,6 +75,6 @@ a creative mindset to complete a given objective on your own efficiently. </p>
 
 <hr>
 
-    <footer> Copyrighted </footer>
+    <footer> James Ukoli </footer>
 </body>
 </html>
